sample_points_from_triangle changed

--- a/script.ipynb
+++ b/script.ipynb
@@ -1511,20 +1511,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Échantillonnage de points : prélèvement de 100 points à partir de chaque triangle.\n",
+    "import numpy as np\n",
     "\n",
     "def sample_points_from_triangle(triangle, num_points=100):\n",
     "    v1, v2, v3 = triangle\n",
     "    bary_coords = np.random.rand(num_points, 2)\n",
     "    sqrt_bary_coords = np.sqrt(bary_coords[:, 0])\n",
     "\n",
-    "    x_coords = (1 - sqrt_bary_coords) * v1[0] + (sqrt_bary_coords * (1 - bary_coords[:, 1])) * v2[0] + (sqrt_bary_coords * bary_coords[:, 1]) * v3[0]\n",
-    "    y_coords = (1 - sqrt_bary_coords) * v1[1] + (sqrt_bary_coords * (1 - bary_coords[:, 1])) * v2[1] + (sqrt_bary_coords * bary_coords[:, 1]) * v3[1]\n",
-    "    z_coords = (1 - sqrt_bary_coords) * v1[2] + (sqrt_bary_coords * (1 - bary_coords[:, 1])) * v2[2] + (sqrt_bary_coords * bary_coords[:, 1]) * v3[2]\n",
+    "    u = sqrt_bary_coords\n",
+    "    v = bary_coords[:, 1]\n",
+    "\n",
+    "    \"\"\"\n",
+    "    La formule spécifique est dérivée de l'expression générale d'interpolation barycentrique \n",
+    "    sommets A, B et C\n",
+    "    coord barycentriques: u et v\n",
+    "    coord cartésiennes: x,y,z \n",
+    "    \"\"\"\n",
+    "    x_coords = (1 - u - v) * v1[0] + u * v2[0] + v * v3[0]\n",
+    "    y_coords = (1 - u - v) * v1[1] + u * v2[1] + v * v3[1]\n",
+    "    z_coords = (1 - u - v) * v1[2] + u * v2[2] + v * v3[2]\n",
     "\n",
     "    sampled_points = np.column_stack((x_coords, y_coords, z_coords))\n",
     "    return sampled_points\n",
-    "\n",
     "\n",
     "# Prélèvement de 100 points de chaque triangle\n",
     "sampled_points_list = [sample_points_from_triangle(triangle, num_points=100) for triangle in triangles]\n",
