calcul des aires #TODO

--- a/script.ipynb
+++ b/script.ipynb
@@ -1582,9 +1582,9 @@
     "        modified_triangle = np.copy(triangle)\n",
     "        modified_triangle[0] = point\n",
     "\n",
-    "        # Calcul des aires A1, A2, A3\n",
-    "        area_original = calculate_triangle_area(triangle)\n",
-    "        area_modified = calculate_triangle_area(modified_triangle)\n",
+    "        # Calcul des aires A1, A2, A3    #TO DO\n",
+    "        area_original = #calculate_triangle_area(triangle)\n",
+    "        area_modified = #calculate_triangle_area(modified_triangle)\n",
     "\n",
     "        # Vérification si la somme des aires est égale à l'aire du triangle\n",
     "        if np.isclose(area_original, area_modified, rtol=1e-5):\n",
