--- a/script.ipynb
+++ b/script.ipynb
@@ -1438,6 +1438,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1487,22 +1494,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "igraph_g = igraphGraph(directed=extended_graph.is_directed()).from_networkx(extended_graph)\n",
-    "print(igraph_g.summary())\n",
-    "\n",
-    "triangles_ids_igraph = np.array(igraph_g.cliques(min=3, max=3))\n",
-    "print(\" IDS TRI\", triangles_ids_igraph[:3])\n",
-    "print(len(triangles_ids_igraph))\n",
-    "\n",
-    "\n",
-    "triangles = np.array(igraph_g.vs['_nx_name'])[triangles_ids_igraph]   #les triangles\n",
-    "# triangles = [list(map(tuple, row)) for row in triangles.tolist()]\n",
-    "print(\"TRI\",triangles)\n",
-    "print(len(triangles))"
+    "mo = np.zeros((500))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo - échantillonnage de 100 points à partir de chaque triangle"
    ]
   },
   {
@@ -1513,8 +1516,8 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def sample_points_from_triangle(triangle, num_points=100):\n",
-    "    v1, v2, v3 = triangle\n",
+    "def sample_points_from_triangle(t, num_points=100):\n",
+    "    v1, v2, v3 = t\n",
     "    bary_coords = np.random.rand(num_points, 2)\n",
     "    sqrt_bary_coords = np.sqrt(bary_coords[:, 0])\n",
     "\n",
@@ -1534,79 +1537,8 @@
     "    sampled_points = np.column_stack((x_coords, y_coords, z_coords))\n",
     "    return sampled_points\n",
     "\n",
-    "\n",
-    "\"\"\"\"\n",
-    "\n",
-    "Calcul des distances : Ces points échantillonnés sont utilisés pour calculer leurs distances par rapport aux 50 triangles les plus proches.\n",
-    "Objectif d'appartenance : L'objectif est d'attribuer chaque point échantillonné à un seul triangle. \n",
-    "Pour déterminer cette appartenance, nous mesurons les aires A1, A2, A3 en remplaçant chaque sommet du triangle par le point de requête. \n",
-    "Ensuite, nous vérifions si la somme de ces trois aires est égale à l'aire du triangle.\n",
-    "Prise en compte des plans parallèles : Pour les triangles partageant des plans parallèles, \n",
-    "nous ajustons légèrement la tolérance de distance sur l'axe vertical par rapport au plan du triangle.\n",
-    "Application de la pénalité : Enfin, une pénalité est appliquée à tous les triangles partageant un point échantillonné. \n",
-    "Cette pénalité, similaire à la perte de croisement d'arêtes (Edge Crossing), est proportionnelle au nombre de triangles qui se chevauchent.\n",
-    "\n",
-    "\"\"\"\n",
-    "# Prélèvement de 100 points de chaque triangle\n",
-    "sampled_points_list = [sample_points_from_triangle(triangle, num_points=100) for triangle in triangles]\n",
-    "\n",
-    "# Affichage des points échantillonnés pour le premier triangle (vous pouvez boucler pour afficher pour tous les triangles)\n",
-    "print(\"Points échantillonnés pour le premier triangle :\")\n",
-    "print(sampled_points_list[0])\n",
-    "\n",
-    "# Convertir les triangles en une liste plate pour faciliter la recherche\n",
-    "flat_triangles = np.vstack(triangles)\n",
-    "\n",
-    "sampled_points_flat = np.vstack(sampled_points_list)\n",
-    "\n",
-    "# Sélection des coordonnées x, y, et z des triangles\n",
-    "flat_triangles_xyz = flat_triangles[:, :3]\n",
-    "\n",
-    "#modèle k-NN\n",
-    "knn_model = NearestNeighbors(n_neighbors=50, algorithm='auto').fit(flat_triangles_xyz)\n",
-    "\n",
-    "# Recherche des indices des triangles les plus proches pour chaque point échantillonné\n",
-    "distances, indices = knn_model.kneighbors(sampled_points_flat)\n",
-    "\n",
-    "# Initialisation des variables pour stocker les résultats\n",
-    "assignment_results = []\n",
-    "\n",
-    "# Calcul des distances par rapport aux 50 triangles les plus proches\n",
-    "for i, point in enumerate(sampled_points_list):\n",
-    "    closest_triangle_indices = indices[i]\n",
-    "    closest_triangles = flat_triangles[closest_triangle_indices]\n",
-    "\n",
-    "    # Calcul des aires et détermination de l'appartenance au triangle\n",
-    "    for triangle in closest_triangles:\n",
-    "        # Remplacer chaque sommet du triangle par le point de requête\n",
-    "        modified_triangle = np.copy(triangle)\n",
-    "        modified_triangle[0] = point\n",
-    "\n",
-    "        # Calcul des aires A1, A2, A3    #TO DO\n",
-    "        area_original = #calculate_triangle_area(triangle)\n",
-    "        area_modified = #calculate_triangle_area(modified_triangle)\n",
-    "\n",
-    "        # Vérification si la somme des aires est égale à l'aire du triangle\n",
-    "        if np.isclose(area_original, area_modified, rtol=1e-5):\n",
-    "            assignment_results.append((point, triangle))\n",
-    "            break  # On attribue le point au premier triangle vérifié\n",
-    "\n",
-    "# Prise en compte des plans parallèles et ajustement de la tolérance (à implémenter)\n",
-    "\n",
-    "# Application de la pénalité pour les triangles se chevauchant (à implémenter)\n",
-    "\n",
-    "# Affichage des résultats (à remplacer par le traitement final souhaité)\n",
-    "for point, triangle in assignment_results:\n",
-    "    print(f\"Point {point} attribué au triangle {triangle}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mo = np.zeros((500))\n"
+    "points = sample_points_from_triangle(triangle, num_points=100)\n",
+    "points"
    ]
   }
  ],
