Lo - Overlaping Triangles - Aires and the number of triangles that overlaps(penalities)

--- a/script.ipynb
+++ b/script.ipynb
@@ -1387,6 +1387,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
@@ -1494,6 +1501,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from scipy.spatial import distance as scipy_distance"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
@@ -1537,8 +1555,74 @@
     "    sampled_points = np.column_stack((x_coords, y_coords, z_coords))\n",
     "    return sampled_points\n",
     "\n",
-    "points = sample_points_from_triangle(triangle, num_points=100)\n",
-    "points"
+    "points100 = sample_points_from_triangle(triangle, num_points=100)\n",
+    "points100\n",
+    "points100.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les Aires"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_distances_to_nearest_triangles(p, t, k=50):\n",
+    "    # Fonction pour calculer les distances aux triangles les plus proches pour chaque point\n",
+    "    \n",
+    "    n_samples = len(p)\n",
+    "    flat_triangles = np.vstack(t)\n",
+    "    knn_model = NearestNeighbors(n_neighbors=3).fit(flat_triangles)\n",
+    "    distances, indices = knn_model.kneighbors(p)\n",
+    "    return distances, indices\n",
+    "\n",
+    "def calculate_triangle_area(t):\n",
+    "    # Fonction pour calculer l'aire d'un triangle en utilisant la formule de Héron\n",
+    "    side_lengths = [scipy_distance.euclidean(t[i], t[(i + 1) % 3]) for i in range(3)]\n",
+    "    s = sum(side_lengths) / 2\n",
+    "    return np.sqrt(s * np.prod([s - length for length in side_lengths]))\n",
+    "\n",
+    "def penalize_overlapping_triangles(points_list, t, k=50):\n",
+    "    # Fonction pour pénaliser les triangles qui se chevauchent\n",
+    "    assignment_results = []\n",
+    "\n",
+    "    distances, indices = calculate_distances_to_nearest_triangles(points_list, triangles, k=k)\n",
+    "\n",
+    "    for i, point_list in enumerate(points_list):\n",
+    "        point = point_list[0]\n",
+    "        closest_triangle_indices = indices[i]\n",
+    "        closest_triangles = t[closest_triangle_indices]\n",
+    "\n",
+    "        for triangle in closest_triangles:\n",
+    "            modified_triangle = np.copy(triangle)\n",
+    "            modified_triangle[0] = point\n",
+    "\n",
+    "            area_original = calculate_triangle_area(triangle)\n",
+    "            area_modified = calculate_triangle_area(modified_triangle)\n",
+    "\n",
+    "            # Vérifier si la somme des aires est égale à l'aire du triangle\n",
+    "            if np.isclose(area_original, area_modified, rtol=1e-5):\n",
+    "                assignment_results.append((point, triangle))\n",
+    "                break\n",
+    "\n",
+    "    overlapping_triangles = np.zeros(len(triangles), dtype=int)\n",
+    "    for point, triangle in assignment_results:\n",
+    "        overlapping_triangles[closest_triangle_indices] += 1\n",
+    "\n",
+    "    penalties = overlapping_triangles\n",
+    "    total_penalty = np.sum(penalties)\n",
+    "    Lo = (1 / len(triangles)) * total_penalty\n",
+    "\n",
+    "    return Lo\n",
+    "\n",
+    "L_o = penalize_overlapping_triangles(points100, triangles, k=50)\n",
+    "print(\"Penalty for overlapping triangles:\", L_o)\n"
    ]
   }
  ],
