--- a/script.ipynb
+++ b/script.ipynb
@@ -1532,7 +1532,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "\n",
     "def sample_points_from_triangle(t, num_points=100):\n",
     "    v1, v2, v3 = t\n",
@@ -1573,26 +1572,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_distances_to_nearest_triangles(p, t, k=50):\n",
-    "    # Fonction pour calculer les distances aux triangles les plus proches pour chaque point\n",
-    "    \n",
-    "    n_samples = len(p)\n",
-    "    flat_triangles = np.vstack(t)\n",
-    "    knn_model = NearestNeighbors(n_neighbors=3).fit(flat_triangles)\n",
-    "    distances, indices = knn_model.kneighbors(p)\n",
-    "    return distances, indices\n",
+    "number_neigh_selected_barycenters = min(50, len(b_hat))\n",
+    "def knnbar(nn):\n",
+    "  _, indexes_neigh_selected_barycenters = NearestNeighbors(n_neighbors=nn).fit(b_hat).kneighbors(b_hat)\n",
+    "  return _, indexes_neigh_selected_barycenters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d, indices = knnbar(number_neigh_selected_barycenters)\n",
+    "indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial import distance as scipy_distance\n",
     "\n",
-    "def calculate_triangle_area(t):\n",
-    "    # Fonction pour calculer l'aire d'un triangle en utilisant la formule de Héron\n",
-    "    side_lengths = [scipy_distance.euclidean(t[i], t[(i + 1) % 3]) for i in range(3)]\n",
+    "def calculate_triangle_area(triangle):\n",
+    "    # Function to calculate the area of a triangle using Heron's formula\n",
+    "    side_lengths = [scipy_distance.euclidean(triangle[i], triangle[(i + 1) % 3]) for i in range(3)]\n",
     "    s = sum(side_lengths) / 2\n",
     "    return np.sqrt(s * np.prod([s - length for length in side_lengths]))\n",
     "\n",
-    "def penalize_overlapping_triangles(points_list, t, k=50):\n",
-    "    # Fonction pour pénaliser les triangles qui se chevauchent\n",
+    "def penalize_overlapping_triangles(points_list, t, indices, k=50):\n",
+    "    # Function to penalize triangles that overlap\n",
     "    assignment_results = []\n",
-    "\n",
-    "    distances, indices = calculate_distances_to_nearest_triangles(points_list, triangles, k=k)\n",
     "\n",
     "    for i, point_list in enumerate(points_list):\n",
     "        point = point_list[0]\n",
@@ -1606,13 +1618,13 @@
     "            area_original = calculate_triangle_area(triangle)\n",
     "            area_modified = calculate_triangle_area(modified_triangle)\n",
     "\n",
-    "            # Vérifier si la somme des aires est égale à l'aire du triangle\n",
+    "            # Check if the sum of areas is close to the area of the triangle\n",
     "            if np.isclose(area_original, area_modified, rtol=1e-5):\n",
     "                assignment_results.append((point, triangle))\n",
     "                break\n",
     "\n",
-    "    overlapping_triangles = np.zeros(len(triangles), dtype=int)\n",
-    "    for point, triangle in assignment_results:\n",
+    "    overlapping_triangles = np.zeros(len(t), dtype=int)\n",
+    "    for point, t in assignment_results:\n",
     "        overlapping_triangles[closest_triangle_indices] += 1\n",
     "\n",
     "    penalties = overlapping_triangles\n",
@@ -1621,7 +1633,11 @@
     "\n",
     "    return Lo\n",
     "\n",
-    "L_o = penalize_overlapping_triangles(points100, triangles, k=50)\n",
+    "# Example usage:\n",
+    "# Suppose 'points100' is an array representing sampled points from a triangle\n",
+    "# Suppose 'triangles' is an array representing all triangles\n",
+    "# Suppose 'indices' is an array of indices obtained from knnbar\n",
+    "L_o = penalize_overlapping_triangles([points100], triangles, indices, k=50)\n",
     "print(\"Penalty for overlapping triangles:\", L_o)\n"
    ]
   }
