--- a/script.ipynb
+++ b/script.ipynb
@@ -1597,35 +1597,46 @@
     "from scipy.spatial import distance as scipy_distance\n",
     "\n",
     "def calculate_triangle_area(triangle):\n",
-    "    # Function to calculate the area of a triangle using Heron's formula\n",
+    "    # Fonction pour calculer l'aire d'un triangle en utilisant la formule de Héron\n",
     "    side_lengths = [scipy_distance.euclidean(triangle[i], triangle[(i + 1) % 3]) for i in range(3)]\n",
     "    s = sum(side_lengths) / 2\n",
     "    return np.sqrt(s * np.prod([s - length for length in side_lengths]))\n",
     "\n",
-    "def penalize_overlapping_triangles(points_list, t, indices, k=50):\n",
-    "    # Function to penalize triangles that overlap\n",
+    "def penalize_overlapping_triangles(points_list, triangles, k=50):\n",
+    "    # Fonction pour pénaliser les triangles qui se chevauchent\n",
     "    assignment_results = []\n",
+    "    overlapping_triangles = np.zeros(len(triangles), dtype=int)  # Déclaration en dehors de la boucle\n",
+    "\n",
+    "    # ajustement de la valeur maximale de k en fonction du nombre de triangles\n",
+    "    k = min(k, len(triangles))\n",
+    "\n",
+    "    # NearestNeighbors pour trouver les k triangles les plus proches pour chaque point\n",
+    "    knn_model = NearestNeighbors(n_neighbors=k).fit(np.vstack(triangles))\n",
+    "    d, indices = knn_model.kneighbors(np.array(points_list)[:, 0, :])\n",
     "\n",
     "    for i, point_list in enumerate(points_list):\n",
     "        point = point_list[0]\n",
-    "        closest_triangle_indices = indices[i]\n",
-    "        closest_triangles = t[closest_triangle_indices]\n",
     "\n",
-    "        for triangle in closest_triangles:\n",
-    "            modified_triangle = np.copy(triangle)\n",
+    "        # Verif que les indices sont valides\n",
+    "        closest_triangle_indices = indices[i, :k]\n",
+    "        closest_triangle_indices = closest_triangle_indices[closest_triangle_indices < len(triangles)]\n",
+    "\n",
+    "        # Accéder aux triangles en utilisant les indices valides\n",
+    "        valid_triangle_indices = []\n",
+    "        for idx in closest_triangle_indices:\n",
+    "            modified_triangle = np.copy(triangles[idx])\n",
     "            modified_triangle[0] = point\n",
     "\n",
-    "            area_original = calculate_triangle_area(triangle)\n",
+    "            area_original = calculate_triangle_area(triangles[idx])\n",
     "            area_modified = calculate_triangle_area(modified_triangle)\n",
     "\n",
-    "            # Check if the sum of areas is close to the area of the triangle\n",
-    "            if np.isclose(area_original, area_modified, rtol=1e-5):\n",
-    "                assignment_results.append((point, triangle))\n",
-    "                break\n",
+    "            # Vérifier si la somme des aires est proche de l'aire du triangle\n",
+    "            if not np.isclose(area_original, area_modified, rtol=1e-5):\n",
+    "                assignment_results.append((point, triangles[idx]))\n",
+    "                valid_triangle_indices.append(idx)\n",
     "\n",
-    "    overlapping_triangles = np.zeros(len(t), dtype=int)\n",
-    "    for point, t in assignment_results:\n",
-    "        overlapping_triangles[closest_triangle_indices] += 1\n",
+    "        # MAJ du overlapping_triangles avec les indices valides\n",
+    "        overlapping_triangles[valid_triangle_indices] += 1\n",
     "\n",
     "    penalties = overlapping_triangles\n",
     "    total_penalty = np.sum(penalties)\n",
@@ -1633,13 +1644,17 @@
     "\n",
     "    return Lo\n",
     "\n",
-    "# Example usage:\n",
-    "# Suppose 'points100' is an array representing sampled points from a triangle\n",
-    "# Suppose 'triangles' is an array representing all triangles\n",
-    "# Suppose 'indices' is an array of indices obtained from knnbar\n",
-    "L_o = penalize_overlapping_triangles([points100], triangles, indices, k=50)\n",
-    "print(\"Penalty for overlapping triangles:\", L_o)\n"
+    "\n",
+    "L_o = penalize_overlapping_triangles([points100], triangles, k=50)\n",
+    "print(\"Pénalité pour les triangles qui se chevauchent :\", L_o)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
