added torch D_f_S_Ss

--- a/script.ipynb
+++ b/script.ipynb
@@ -981,13 +981,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Récupération des points de l'espace de départ P"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 134,
    "metadata": {},
@@ -1021,7 +1014,7 @@
     "    return first_term + second_term\n",
     "\n",
     "\n",
-    "torch_d_P_Ps(torch.Tensor(normalized_inclusion_score), torch.Tensor(np.array(graph)), torch.Tensor(np.array(extended_graph)))"
+    "d_P_Ps = torch_d_P_Ps(torch.Tensor(normalized_inclusion_score), torch.Tensor(np.array(graph)), torch.Tensor(np.array(extended_graph)))"
    ]
   },
   {
@@ -1040,143 +1033,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IGRAPH U--- 5999 17991 -- \n",
-      "+ attr: _nx_name (v), index_triangle (v)\n",
-      "triangles shape :  (11994, 3, 3)\n",
-      "[[39.        8.793697 -4.666995]\n",
-      " [51.        8.793697 -4.666995]\n",
-      " [39.        8.793697 -5.333005]]\n",
-      "shape b :  (11994, 3)\n",
-      "Barycentre b:  [[43.          8.793697   -4.8889985 ]\n",
-      " [55.          1.0515273   3.7313068 ]\n",
-      " [55.         -8.515905   -2.804371  ]\n",
-      " ...\n",
-      " [75.05613    -0.94137865 21.        ]\n",
-      " [75.01313    -0.3882971   8.099999  ]\n",
-      " [75.03516    -0.72036856 25.300001  ]]\n"
+      "torch.Size([500]) torch.Size([500, 3]) torch.Size([11994, 3])\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0558)"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Creation igraph\n",
-    "igraph_g_original = igraphGraph(directed=extended_graph.is_directed()).from_networkx(graph)\n",
-    "print(igraph_g_original.summary())\n",
+    "def torch_d_f_S_Ss(p_b_hat, b_hat, b):\n",
+    "    # print(p_b_hat.shape, b_hat.shape, b.shape)\n",
     "\n",
-    "#Find triangles\n",
+    "    expanded_x1 = b_hat.unsqueeze(1)\n",
+    "    expanded_x2 = b.unsqueeze(0)\n",
+    "    distances = torch.norm(expanded_x1 - expanded_x2, dim=2)\n",
+    "\n",
+    "    min_b = distances.min(dim=1).values\n",
+    "\n",
+    "    final_term = torch.sum(p_b_hat * min_b)\n",
+    "\n",
+    "    return final_term\n",
+    "\n",
+    "\n",
+    "\n",
+    "igraph_g_original = igraphGraph(directed=extended_graph.is_directed()).from_networkx(graph)\n",
     "triangles_ids_igraph_original = np.array(igraph_g_original.cliques(min=3, max=3))\n",
     "triangles = np.array(igraph_g_original.vs['_nx_name'])[triangles_ids_igraph_original]\n",
-    "print(\"triangles shape : \", triangles.shape)\n",
-    "print(triangles[0])\n",
+    "torch_b = torch.Tensor(np.mean(triangles, axis=1))\n",
     "\n",
-    "# Calculate barycenters\n",
-    "b = np.mean(triangles, axis=1)\n",
-    "print(\"shape b : \", b.shape)\n",
-    "print(\"Barycentre b: \", b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(500, 3)\n",
-      "B_HAT :  [[51.         -1.9055322  92.26812   ]\n",
-      " [59.         -5.8177896  -5.3254504 ]\n",
-      " [51.         -5.9658127  94.75098   ]\n",
-      " ...\n",
-      " [51.          0.52830964 -7.7843075 ]\n",
-      " [39.          5.578963   -3.1718981 ]\n",
-      " [55.         -2.5225995   2.5312507 ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get finals selected triangles & calculate barycenters\n",
-    "b_hat = np.mean(selected_triangles, axis=1)\n",
-    "print(b_hat.shape)\n",
-    "print(\"B_HAT : \", b_hat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(500, 11994)\n",
-      "Distances euclidiennes entre les barycentres b et b_hat :\n",
-      " [[ 98.07129628  88.67644254  95.3859296  ...  75.22480879  87.53973334\n",
-      "   71.16053869]\n",
-      " [ 21.67224123  12.05040932   5.44386534 ...  31.2187126   21.59033187\n",
-      "   34.94321422]\n",
-      " [101.04438514  91.3773678   97.67061397 ...  77.73769257  90.08957176\n",
-      "   73.67931464]\n",
-      " ...\n",
-      " [ 11.86167982  12.20176744  11.07237967 ...  37.54189267  28.80593334\n",
-      "   40.91233812]\n",
-      " [  5.41137247  18.00421925  21.32604945 ...  43.89578548  38.20483492\n",
-      "   46.35583145]\n",
-      " [ 18.08642232   3.77021437   8.02424926 ...  27.3101316   20.88280605\n",
-      "   30.38209207]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "distances = matrix_distance_euclidienne_barycentres(b, b_hat)\n",
-    "print(distances.shape)\n",
-    "print(\"Distances euclidiennes entre les barycentres b et b_hat :\\n\", distances)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(500,)\n",
-      "[7.0722124  2.97561397 4.16920081 4.35740783 2.15850529]\n"
-     ]
-    }
-   ],
-   "source": [
-    "minimums_b = np.min(distances, axis=1)\n",
-    "print(minimums_b.shape)\n",
-    "print(minimums_b[:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "44408628.79047325\n"
-     ]
-    }
-   ],
-   "source": [
-    "d_f_S_Ss = np.sum(selected_triangles_indexes * minimums_b)\n",
-    "print(d_f_S_Ss)"
+    "torch_b_hat = torch.Tensor(np.mean(selected_triangles, axis=1))\n",
+    "\n",
+    "torch_p_b_hat = torch.Tensor(final_scores[selected_triangles_indexes])\n",
+    "\n",
+    "d_f_S_Ss = torch_d_f_S_Ss(torch_p_b_hat, torch_b_hat, torch_b)"
    ]
   },
   {
