matrice de distances - last correction

--- a/script.ipynb
+++ b/script.ipynb
@@ -1075,9 +1075,34 @@
     }
    ],
    "source": [
-    "def matrix_distance_euclidienne_barycentres(barycentre_b, barycentre_b_hat):\n",
+    "def matrix_distances_euclidiennes(key1, key2):\n",
     "    \"\"\"\n",
-    "    Calculate distances between barycenters b et b_hat after the k-NN process.\n",
+    "    Calculate distances between 2 points x et y.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - key1: points avant K-NN\n",
+    "    - key2: sampled points\n",
+    "\n",
+    "    Returns:\n",
+    "    - distances matrix: array-like, shape (M, M)\n",
+    "        Matrix of distances between barycenters after the k-NN process.\n",
+    "    \"\"\"\n",
+    "    return cdist(key1, key2, metric='sqeuclidean').T\n",
+    "\n",
+    "distances_matrix = matrix_distances_euclidiennes(keys_input, keys_output)\n",
+    "print(\"Squared Euclidean Distances Matrix Shape:\", distances_matrix.shape)\n",
+    "print(\"Distances Matrix:\\n\", distances_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrix_distances_euclidienne(key1, key2):\n",
+    "    \"\"\"\n",
+    "    Calculate distances between 2 points.\n",
     "\n",
     "    Parameters:\n",
     "    - b_hat: array-like, shape (M, 3)\n",
@@ -1089,9 +1114,9 @@
     "    - distances_after: array-like, shape (M, M)\n",
     "        Matrix of distances between barycenters after the k-NN process.\n",
     "    \"\"\"\n",
-    "    return cdist(barycentre_b, barycentre_b_hat, metric='sqeuclidean').T\n",
+    "    return cdist(key1, key2, metric='sqeuclidean').T\n",
     "\n",
-    "distances_matrix = matrix_distance_euclidienne_barycentres(keys_input, keys_output)\n",
+    "distances_matrix = matrix_distances_euclidienne(keys_input, keys_output)\n",
     "print(\"Squared Euclidean Distances Matrix Shape:\", distances_matrix.shape)\n",
     "print(\"Distances Matrix:\\n\", distances_matrix)\n",
     "\n",
