--- a/script.ipynb
+++ b/script.ipynb
@@ -18,6 +18,7 @@
     "from sklearn.neighbors import NearestNeighbors\n",
     "import networkx as nx\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "from numpy import mean\n",
     "from igraph import Graph as igraphGraph\n",
     "import matplotlib.pyplot as plt\n",
@@ -148,9 +149,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.03427286 0.0342928  0.03427286 ... 0.03190688 0.04631544 0.03190688]\n",
-      "[0.36269852 0.36290954 0.36269852 ... 0.33766011 0.49014116 0.33766011]\n",
-      "[0.57831716 0.57836198 0.57831716 ... 0.57299063 0.60512289 0.57299063]\n",
+      "[0.6595211  0.65990481 0.6595211  ... 0.61399193 0.89125932 0.61399193]\n",
+      "[0.66237132 0.66275669 0.66237132 ... 0.61664539 0.89511104 0.61664539]\n",
+      "[0.59132718 0.59137912 0.59132718 ... 0.58514965 0.62228802 0.58514965]\n",
       "(5999,)\n"
      ]
     }
@@ -210,11 +211,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[89.45155  ,  4.7321377, 88.56343  ],\n",
-       "       [90.42553  ,  4.7321377, 86.21206  ],\n",
+       "array([[89.11374  ,  5.2797017, 88.39131  ],\n",
        "       [87.81501  ,  5.2797017, 90.51065  ],\n",
-       "       [77.47796  ,  5.2797017, 96.84521  ],\n",
-       "       [91.13051  ,  4.7321377, 82.895386 ]], dtype=float32)"
+       "       [86.77158  ,  5.2797017, 91.79918  ],\n",
+       "       [90.06495  ,  5.2797017, 86.0949   ],\n",
+       "       [90.30048  ,  5.2797017, 85.29975  ]], dtype=float32)"
       ]
      },
      "execution_count": 8,
@@ -278,7 +279,7 @@
      "output_type": "stream",
      "text": [
       "Number of nodes: 1500\n",
-      "Number of edges: 11835\n"
+      "Number of edges: 11736\n"
      ]
     }
    ],
@@ -348,40 +349,49 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1500, 1500])\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"\n",
-    "inclusion_score = [[f_1_1  , f_1_2  , ..., f_63_1  ],\n",
-    "                    ...,\n",
-    "                   [f_1_M-1, f_1_M-1, ..., f_63_M-1]]\n",
-    "M = number of points\n",
-    "64 = hidden dimensions\n",
-    "\"\"\"\n",
+    "class SparseAttentionEdgePredictorLayer(nn.Module):\n",
+    "    def __init__(self, nodes, neighbors, size=64):\n",
+    "        super().__init__()\n",
+    "        self.size = size\n",
+    "        self.nodes = nodes\n",
+    "        self.neighbors = neighbors\n",
+    "        self.wq = nn.Parameter(torch.Tensor(size))\n",
+    "        self.wk = nn.Parameter(torch.Tensor(size))\n",
+    "\n",
+    "        nn.init.normal_(self.wq)\n",
+    "        nn.init.normal_(self.wk)\n",
+    "\n",
+    "    def forward(self, f):\n",
+    "        wq_f = self.wq.reshape(-1, 1) * f                   # Wq*f\n",
+    "        wk_f = self.wk.reshape(-1, 1) * f                   # Wq*f\n",
+    "        S = torch.exp(torch.matmul(wq_f.T, wk_f))           # e^((wq_f.T)*(wk_f))\n",
+    "        \n",
+    "        nonzero_neigh = self.neighbors.nonzero()                                                    # Find indexes of neighbors in graph\n",
+    "        unique_first_elements, counts = torch.unique(nonzero_neigh[:, 0], return_counts=True)       # Count number of neighbors per node\n",
+    "        split_tensors = list(torch.split(nonzero_neigh, tuple(counts)))                             # split indexes of neighbors into a list (1 element = 1 tensor of indexes)\n",
+    "\n",
+    "        temp = [[S[n[i,0], n[i,1]] for i in range(len(n))] for n in split_tensors]                  # For each node, get the S value for the neighbors indexes\n",
+    "        summed = torch.Tensor([torch.sum(torch.Tensor(e)) for e in temp])                           # Sum these results for each nodes\n",
+    "        division = summed.unsqueeze(0).repeat(1, S.shape[1], 1)[0]                                  # Repeat the sum in S.shape[1] array => division per columns\n",
+    "        final_term  = S / division\n",
+    "\n",
+    "        return final_term\n",
     "\n",
     "\n",
     "f = np.mean(inclusion_score, axis=1)                            # Flatten the matrix of inclusion score \n",
-    "wq = np.random.rand(64)\n",
-    "wk = np.random.rand(64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wq_f = wq.reshape(-1, 1) * f            # Wq*f\n",
-    "wk_f = wk.reshape(-1, 1) * f            # Wq*f\n",
-    "S = np.exp(np.dot(wq_f.T, wk_f))        # e^((wq_f.T)*(wk_f))\n",
-    "\n",
-    "nodes = list(extended_graph.nodes())                                                                                # list of nodes\n",
-    "node_indices = {node: index for index, node in enumerate(nodes)}                                                    # dict{node: index}\n",
-    "neighbors_indices = [[node_indices[neighbor] for neighbor in extended_graph.neighbors(node)] for node in nodes]     # List of list : [[neigh1 of node1, neigh2 of node1...], [neigh1 of node2, neigh2 of node2...]...]\n",
-    "\n",
-    "\n",
-    "for index_current_node, neighbors_index in enumerate(neighbors_indices):        # For each neighbors of the 'index_current_node' node\n",
-    "    sum_columns = np.sum(S[:, neighbors_index], axis=1)                         # Sum along the rows the values of the neighbors\n",
-    "    S[index_current_node] = S[index_current_node] / sum_columns                 # And divide the current node columns by the sume of the neighbors"
+    "layer = SparseAttentionEdgePredictorLayer(torch.Tensor(list(extended_graph.nodes())), torch.Tensor(nx.adjacency_matrix(extended_graph).toarray()))\n",
+    "S = layer.forward(torch.Tensor(f))\n",
+    "print(S.shape)"
    ]
   },
   {
@@ -393,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -442,45 +452,46 @@
       "  (1, 3)\t1\n",
       "  (1, 4)\t1\n",
       "  (1, 5)\t1\n",
-      "  (1, 6)\t1\n",
       "  (1, 7)\t1\n",
       "  (1, 8)\t1\n",
-      "  (1, 9)\t1\n",
       "  (1, 11)\t1\n",
       "  (1, 12)\t1\n",
+      "  (1, 13)\t1\n",
+      "  (1, 14)\t1\n",
       "  :\t:\n",
-      "  (1498, 1445)\t1\n",
-      "  (1498, 1460)\t1\n",
-      "  (1498, 1462)\t1\n",
-      "  (1498, 1471)\t1\n",
-      "  (1498, 1472)\t1\n",
-      "  (1498, 1478)\t1\n",
-      "  (1498, 1479)\t1\n",
-      "  (1498, 1480)\t1\n",
-      "  (1498, 1481)\t1\n",
-      "  (1498, 1482)\t1\n",
+      "  (1498, 1463)\t1\n",
+      "  (1498, 1464)\t1\n",
+      "  (1498, 1465)\t1\n",
+      "  (1498, 1475)\t1\n",
+      "  (1498, 1491)\t1\n",
+      "  (1498, 1492)\t1\n",
+      "  (1498, 1493)\t1\n",
+      "  (1498, 1494)\t1\n",
+      "  (1498, 1495)\t1\n",
+      "  (1498, 1496)\t1\n",
       "  (1498, 1499)\t1\n",
-      "  (1499, 1383)\t1\n",
-      "  (1499, 1444)\t1\n",
-      "  (1499, 1445)\t1\n",
-      "  (1499, 1450)\t1\n",
-      "  (1499, 1460)\t1\n",
-      "  (1499, 1461)\t1\n",
       "  (1499, 1462)\t1\n",
-      "  (1499, 1472)\t1\n",
-      "  (1499, 1479)\t1\n",
-      "  (1499, 1480)\t1\n",
-      "  (1499, 1481)\t1\n",
-      "  (1499, 1482)\t1\n",
+      "  (1499, 1463)\t1\n",
+      "  (1499, 1464)\t1\n",
+      "  (1499, 1465)\t1\n",
+      "  (1499, 1466)\t1\n",
+      "  (1499, 1483)\t1\n",
+      "  (1499, 1489)\t1\n",
+      "  (1499, 1491)\t1\n",
+      "  (1499, 1492)\t1\n",
       "  (1499, 1493)\t1\n",
+      "  (1499, 1494)\t1\n",
+      "  (1499, 1495)\t1\n",
+      "  (1499, 1496)\t1\n",
       "  (1499, 1498)\t1\n",
-      "[[0.07105254 0.07105481 0.07105055 ... 0.07106763 0.07087627 0.07099185]\n",
-      " [1.08190691 0.07094702 0.07094154 ... 0.07096354 0.07071727 0.07086599]\n",
-      " [1.08241881 0.53697955 0.07135537 ... 0.07135867 0.07132166 0.07134401]\n",
-      " ...\n",
-      " [1.0103909  1.01254679 1.00358073 ... 0.06334042 0.06158606 0.06264472]\n",
-      " [1.04891197 1.0509709  1.04189476 ... 0.42324795 0.06485352 0.06525236]\n",
-      " [1.09857678 1.10080189 1.09132052 ... 0.42564751 0.21968005 0.06840846]]\n"
+      "tensor([[0.0714, 0.0628, 0.0669,  ..., 0.0649, 0.0717, 0.0718],\n",
+      "        [0.0714, 0.0628, 0.0669,  ..., 0.0649, 0.0717, 0.0718],\n",
+      "        [0.0718, 0.0632, 0.0672,  ..., 0.0654, 0.0722, 0.0723],\n",
+      "        ...,\n",
+      "        [0.0701, 0.0617, 0.0658,  ..., 0.0632, 0.0704, 0.0702],\n",
+      "        [0.0713, 0.0627, 0.0668,  ..., 0.0647, 0.0716, 0.0716],\n",
+      "        [0.0707, 0.0621, 0.0663,  ..., 0.0639, 0.0709, 0.0709]],\n",
+      "       grad_fn=<DivBackward0>)\n"
      ]
     }
    ],
@@ -493,9 +504,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m A_s \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((target_number_point,target_number_point))   \u001b[38;5;66;03m# Init A_s to 0\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m A_s \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmatmul(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43madjacency\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtoarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m, S\u001b[38;5;241m.\u001b[39mT)     \u001b[38;5;66;03m# A_s = S * A * S.T\u001b[39;00m\n\u001b[0;32m      3\u001b[0m A_s \u001b[38;5;241m=\u001b[39m A_s\u001b[38;5;241m/\u001b[39mA_s\u001b[38;5;241m.\u001b[39mmax()                                         \u001b[38;5;66;03m# Normalize\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Arthur\\miniconda3\\envs\\meshPFE\\lib\\site-packages\\torch\\_tensor.py:1030\u001b[0m, in \u001b[0;36mTensor.__array__\u001b[1;34m(self, dtype)\u001b[0m\n\u001b[0;32m   1028\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(Tensor\u001b[38;5;241m.\u001b[39m__array__, (\u001b[38;5;28mself\u001b[39m,), \u001b[38;5;28mself\u001b[39m, dtype\u001b[38;5;241m=\u001b[39mdtype)\n\u001b[0;32m   1029\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1030\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1031\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1032\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumpy()\u001b[38;5;241m.\u001b[39mastype(dtype, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead."
+     ]
+    }
+   ],
    "source": [
     "A_s = np.zeros((target_number_point,target_number_point))   # Init A_s to 0\n",
     "A_s = np.matmul(np.matmul(S, adjacency.toarray()), S.T)     # A_s = S * A * S.T\n",
@@ -504,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +1010,7 @@
     "\n",
     "    expanded_x1 = x.unsqueeze(1)\n",
     "    expanded_x2 = y.unsqueeze(0)\n",
-    "    distances = torch.norm(expanded_x1 - expanded_x2, dim=2)\n",
+    "    distances = torch.norm(expanded_x1 - expanded_x2, dim=2)        # distance matrix\n",
     "\n",
     "    min_x = distances.min(dim=1).values\n",
     "    min_y = distances.min(dim=0)\n",
@@ -1016,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
