corrected devco torch

--- a/script.ipynb
+++ b/script.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +50,7 @@
     }
    ],
    "source": [
+    "torch.manual_seed(0)  #  for repeatable results\n",
     "transformation = Transformation()\n",
     "\n",
     "user_number_triangles = 500   #à diminuer si le process est trop long\n",
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,29 +103,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_6312\\2030801359.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  result_np = torch.stack([previous_inclusion_score, torch.tensor(list_inc_score)])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5999])\n"
+     ]
+    }
+   ],
    "source": [
     "class DevConv(nn.Module):\n",
-    "    def __init__(self, graph, output_dimension):\n",
+    "    def __init__(self, nodes, adjacency_matrix, output_dimension):\n",
     "        super().__init__()\n",
-    "        self.graph = graph\n",
-    "        self.list_node = list(graph._node)\n",
+    "        self.size = output_dimension\n",
+    "        self.nodes = nodes\n",
+    "        self.adjacency_matrix = adjacency_matrix\n",
+    "        self.W_phi = nn.Parameter(torch.Tensor(output_dimension))\n",
+    "        self.W_theta = nn.Parameter(torch.Tensor(size=(3,1)))\n",
     "\n",
-    "        self.W_phi = torch.tensor(np.random.random((output_dimension))) #change #passer en tensor\n",
-    "        self.W_theta = torch.tensor(np.array([0.1, 0.1, 0.1]).reshape(1, -1))  # change #passer en tensor\n",
-    "        print(\"self.W_theta.shape : \" )\n",
-    "        print(self.W_theta.shape)\n",
+    "        nn.init.normal_(self.W_phi)\n",
+    "        nn.init.normal_(self.W_theta)\n",
+    "\n",
+    "        # print(\"self.W_phi.shape : \", self.W_phi.shape)\n",
+    "        # print(\"self.W_theta.shape : \", self.W_theta.shape)\n",
     "    \n",
-    "    # objective plus de np dans le forward, que utiliser des fonction pytorch (nn.)\n",
     "    def forward(self, previous_inclusion_score, return_flatten=True):\n",
-    "        list_inc_score = np.zeros((len(self.list_node), len(self.W_phi)))                               #list of \"output_dimension\" for each \"list_node\" element\n",
-    "        for index_current_node, (current_node, dict_neigh) in enumerate(self.graph._adj.items()):       # for each node and its adjacency nodes\n",
-    "            neigh_nodes = np.array(list(dict_neigh.keys()))                                             # array of adjacency nodes\n",
-    "            diff = current_node - neigh_nodes                                                           # Compute the differences between current_node and all neighbor nodes   (x_i - x_j)\n",
-    "            neigh_distances = np.linalg.norm(self.W_theta * diff, axis=1)                               # Compute the norm for each vector difference  ||W_theta * (x_i - x_j)||\n",
-    "            list_inc_score[index_current_node] = self.W_phi * np.max(neigh_distances)                   # Add (W_phi * ||W_theta * (x_i - x_j)||) to the inclusion score list\n",
+    "        list_inc_score = torch.zeros((self.nodes.shape[0], self.size))                               #list of \"output_dimension\" for each \"list_node\" element\n",
+    "        for index_current_node, list_neighbors in enumerate(self.adjacency_matrix):       # for each node and its adjacency nodes\n",
+    "            neighbors = self.nodes[list_neighbors.nonzero()]        \n",
+    "            diff = self.nodes[index_current_node] - neighbors                                                           # Compute the differences between current_node and all neighbor nodes   (x_i - x_j)\n",
+    "            to_norm = self.W_theta.T.unsqueeze(1).repeat(1, diff.shape[0], 1)[0] * diff.squeeze(1)\n",
+    "            neigh_distances = torch.norm(to_norm, dim=1)                               # Compute the norm for each vector difference  ||W_theta * (x_i - x_j)||\n",
+    "            list_inc_score[index_current_node] = (self.W_phi * neigh_distances.max()).clone()                   # Add (W_phi * ||W_theta * (x_i - x_j)||) to the inclusion score list\n",
     "\n",
     "        if len(previous_inclusion_score)==0:                            # return if no previous inclusion score\n",
     "            if return_flatten:\n",
@@ -132,123 +153,43 @@
     "            return list_inc_score\n",
     "        \n",
     "        if list_inc_score.shape[1]!=1:                                  # If inclusion score is not vector\n",
-    "            list_inc_score = np.mean(list_inc_score, axis=1)            # Mean the matrix for each node\n",
+    "            list_inc_score = torch.mean(list_inc_score, dim=1)            # Mean the matrix for each node\n",
     "\n",
     "        # array of array to array\n",
     "        if len(list_inc_score.shape)==2:                 \n",
     "            if list_inc_score.shape[1]==1:\n",
     "                list_inc_score = list_inc_score.flatten()\n",
     "\n",
-    "        # Return the mean of previous and current inclusion score\n",
-    "        print(\"previous_inclusion score : \")\n",
-    "        print(previous_inclusion_score.shape)\n",
-    "        \n",
-    "        print(\"list_inc_score : \")\n",
-    "        print(list_inc_score.shape)\n",
     "        result_np = torch.stack([previous_inclusion_score, torch.tensor(list_inc_score)])\n",
-    "        print(\"result_np.shape : \")\n",
-    "        print(result_np.shape)\n",
     "        \n",
-    "        result_np = torch.mean(result_np, axis=0)\n",
-    "        print(\"mean.shape : \")\n",
-    "        print(result_np.shape)\n",
+    "        result_np = torch.mean(result_np, dim=0)\n",
     "        \n",
-    "        # result_np =  torch.from_numpy(result_np)\n",
-    "        # print(\"devconv tensor shape : \")\n",
-    "        # print(result_np.shape)\n",
-    "        #return torch.from_numpy(np.mean(np.array([previous_inclusion_score, list_inc_score], dtype=np.float64), axis=0))\n",
     "        return result_np\n",
-    "    \n",
-    "    \n",
-    "#Tensor.numpy() pour commencer, à la fin repasser en tensor normaux.\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
     "class GNN_Model(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, nodes, adjacency_matrix):\n",
     "        super(GNN_Model, self).__init__()\n",
-    "        # self.linear = nn.Sequential(\n",
-    "        #     DevConv(graph, 1),\n",
-    "        #     nn.ReLU(),\n",
-    "        #     DevConv(graph, 64),\n",
-    "        #     nn.ReLU(),\n",
-    "        #     DevConv(graph, 1),\n",
-    "        #     nn.Sigmoid()\n",
-    "        # )\n",
-    "        self.devconv = DevConv(graph,1)\n",
+    "        self.devconv = DevConv(nodes, adjacency_matrix, 1)\n",
     "        self.relu = nn.ReLU()\n",
-    "        self.devconv2 = DevConv(graph, 64)\n",
+    "        self.devconv2 = DevConv(nodes, adjacency_matrix, 64)\n",
     "        self.relu2 = nn.ReLU()\n",
-    "        self.devconv3 = DevConv(graph,1)\n",
+    "        self.devconv3 = DevConv(nodes, adjacency_matrix,1)\n",
     "        self.sigmoid = nn.Sigmoid()\n",
     "        \n",
     "    def forward(self, x):\n",
     "        x= self.devconv(x)\n",
-    "        x= torch.tensor(x)\n",
-    "        #print(x)\n",
     "        x= self.relu(x)\n",
     "        x= self.devconv2(x)\n",
     "        x= self.relu2(x)\n",
     "        x= self.devconv3(x)\n",
     "        x= self.sigmoid(x)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "self.W_theta.shape : \n",
-      "torch.Size([1, 3])\n",
-      "self.W_theta.shape : \n",
-      "torch.Size([1, 3])\n",
-      "self.W_theta.shape : \n",
-      "torch.Size([1, 3])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "previous_inclusion score : \n",
-      "torch.Size([5999])\n",
-      "list_inc_score : \n",
-      "(5999,)\n",
-      "result_np.shape : \n",
-      "torch.Size([2, 5999])\n",
-      "mean.shape : \n",
-      "torch.Size([5999])\n",
-      "previous_inclusion score : \n",
-      "torch.Size([5999])\n",
-      "list_inc_score : \n",
-      "(5999,)\n",
-      "result_np.shape : \n",
-      "torch.Size([2, 5999])\n",
-      "mean.shape : \n",
-      "torch.Size([5999])\n"
-     ]
-    }
-   ],
-   "source": [
-    "torch.manual_seed(0)  #  for repeatable results\n",
-    "gnn = GNN_Model()\n",
-    "# inp = np.array([[[[1,2,3,4],  # batch(=1) x channels(=1) x height x width\n",
-    "#                   [1,2,3,4],\n",
-    "#                   [1,2,3,4]]]])\n",
-    "inp = np.array([])\n",
-    "x = torch.tensor(inp, dtype=torch.float)\n",
-    "inclusion_score = gnn(x)"
+    "        return x\n",
+    "\n",
+    "\n",
+    "gnn = GNN_Model(torch.Tensor(np.array(graph)), torch.Tensor(nx.adjacency_matrix(graph).toarray()))\n",
+    "inclusion_score = gnn(torch.empty(0))\n",
+    "print(inclusion_score.shape)"
    ]
   },
   {
@@ -260,20 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[88.3909, -7.5076, 81.2000],\n",
-      "        [87.6610, -7.9078, 29.6000],\n",
-      "        [51.0000, -8.7748, -4.3345],\n",
-      "        ...,\n",
-      "        [51.0000, -8.1771, -8.2519],\n",
-      "        [75.0000,  5.7970, 96.6208],\n",
-      "        [75.0000,  4.1575, 97.7560]])\n"
+      "torch.Size([1500, 3])\n"
      ]
     }
    ],
@@ -297,7 +232,7 @@
     "target_number_point = min(len(graph._node), user_number_triangles*3)   # number of points for the simplification\n",
     "layer = MultinomialLayer(target_number_point, torch.Tensor(np.array(graph)))\n",
     "list_k_nodes = layer.forward(torch.Tensor(inclusion_score))\n",
-    "print(list_k_nodes)"
+    "print(list_k_nodes.shape)"
    ]
   },
   {
@@ -309,38 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n_, indices = NearestNeighbors(n_neighbors=15).fit(list_k_nodes).kneighbors(list_k_nodes)        # KNN of the selected points\\n\\nextended_graph = nx.Graph()\\nfor index_poly, poly in enumerate(indices):                                 # For the neighbors of the 'index_poly' node\\n    current_node = tuple(list_k_nodes[poly[0]])                             # Tuple of the main node coordinates\\n    for index_other_node in poly[1:]:                                       # For every neighbors of the main node (main node is the first index)\\n        edge = current_node, tuple(list_k_nodes[index_other_node])          # Create an edge of two tuples\\n        extended_graph.add_edge(*edge)                                      # Add the edge to the graph\\n\\ntransformation.print_graph_properties(graph=extended_graph, display_graph=False, display_labels=False)\\n\""
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "_, indices = NearestNeighbors(n_neighbors=15).fit(list_k_nodes).kneighbors(list_k_nodes)        # KNN of the selected points\n",
-    "\n",
-    "extended_graph = nx.Graph()\n",
-    "for index_poly, poly in enumerate(indices):                                 # For the neighbors of the 'index_poly' node\n",
-    "    current_node = tuple(list_k_nodes[poly[0]])                             # Tuple of the main node coordinates\n",
-    "    for index_other_node in poly[1:]:                                       # For every neighbors of the main node (main node is the first index)\n",
-    "        edge = current_node, tuple(list_k_nodes[index_other_node])          # Create an edge of two tuples\n",
-    "        extended_graph.add_edge(*edge)                                      # Add the edge to the graph\n",
-    "\n",
-    "transformation.print_graph_properties(graph=extended_graph, display_graph=False, display_labels=False)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +315,7 @@
        "(22500, 64)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +407,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22500, 22500)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.adjacency_matrix(extended_graph).toarray().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FaceCandidatesLayer(nn.Module):\n",
+    "    def __init__(self, adjacency_matrix):\n",
+    "        super().__init__()\n",
+    "        self.adjacency_matrix = adjacency_matrix\n",
+    "\n",
+    "    def forward(self, S):\n",
+    "        A_s = torch.matmul(torch.matmul(S, self.adjacency_matrix), S.T)    # A_s = S * A * S.T\n",
+    "        A_s = A_s/A_s.max()                                         # Normalize\n",
+    "        print(A_s)\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "layer = FaceCandidatesLayer(torch.Tensor(nx.adjacency_matrix(extended_graph).toarray()))\n",
+    "A_s = layer.forward(torch.Tensor(S))\n",
+    "print(A_s.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
